[Done] reffal rewqards

--- a/what-we-do.html
+++ b/what-we-do.html
@@ -577,7 +577,7 @@
             </div>
           </div>
           <div class="uui-footer04_bottom-wrapper">
-            <div class="uui-text-size-small text-color-gray500">© 2025 Yoke Transport</div>
+            <div class="uui-text-size-small text-color-gray500">© 2025 Yoke.co </div>
             <div class="w-layout-grid uui-footer04_legal-list-2">
               <a href="documents/Yoke-Tariff.pdf" target="_blank" class="uui-footer04_legal-link-2">Terms &amp; Conditions</a>
             </div>
