--- a/about.html
+++ b/about.html
@@ -561,8 +561,8 @@
                           Associate, for a Nashville-based corporate event
                           company. The Covid-19 pandemic led Mark to pursue a
                           career in transportation logistics, which eventually
-                          landed him with the incredible team at Yoke.co .
-                          As Operations Manager, Mark ensures our quality of
+                          landed him with the incredible team at Yoke . As
+                          Operations Manager, Mark ensures our quality of
                           service by coordinating drivers, consulting with
                           clients and supporting the rest of the operations
                           team.
@@ -1338,7 +1338,7 @@
             </div>
             <div class="uui-footer04_bottom-wrapper">
               <div class="uui-text-size-small text-color-gray500">
-                © 2025 Yoke.co
+                © 2025 Yoke
               </div>
               <div class="w-layout-grid uui-footer04_legal-list-2">
                 <a
