--- a/customers.html
+++ b/customers.html
@@ -146,8 +146,8 @@
           <div class="left-subhead-wrapper rightmarg secondarypage">
             <div class="margin-60px less">
               <p class="subhead white nomarg">
-                Yoke.co: The production/entertainment industry’s solution
-                to Keep On Truckin&#x27;…
+                Yoke: The production/entertainment industry’s solution to
+                Keep On Truckin&#x27;…
               </p>
             </div>
           </div>
@@ -538,7 +538,7 @@
             </div>
             <div class="uui-footer04_bottom-wrapper">
               <div class="uui-text-size-small text-color-gray500">
-                © 2025 Yoke.co
+                © 2025 Yoke
               </div>
               <div class="w-layout-grid uui-footer04_legal-list-2">
                 <a
