--- a/carriers.html
+++ b/carriers.html
@@ -436,15 +436,15 @@
                   <div class="uui-text-size-medium-5">
                     Email us at
                     <a
-                      href="mailto:ap@yoke.co?subject=Questions%20about%20Payment"
+                      href="mailto:accounting@yoke.co?subject=Questions%20about%20Payment"
                       class="link"
-                      >ap@yoke.co
+                      >accounting@yoke.co
                     </a>
                   </div>
                   <div class="uui-text-size-medium-5 topmarg">
                     Call us at<a href="tel:646-350-3379" class="link">
                       646-350-3379 </a
-                    >x3 for AP
+                    >x3 for Accounting
                   </div>
                   <div class="uui-space-small-4"></div>
                   <div class="uui-space-small-4"></div>
@@ -633,7 +633,7 @@
             </div>
             <div class="uui-footer04_bottom-wrapper">
               <div class="uui-text-size-small text-color-gray500">
-                © 2025 Yoke.co
+                © 2025 Yoke
               </div>
               <div class="w-layout-grid uui-footer04_legal-list-2">
                 <a
