--- a/index.html
+++ b/index.html
@@ -2199,10 +2199,10 @@
                       </div>
                     </div>
                     <div class="uui-heading-xxsmall-2 text-weight-medium">
-                      &quot;As a carrier working with Yoke.co, I can
-                      confidently say that they are a top-tier partner for any
-                      logistics or transportation needs, particularly within the
-                      event industry. From their unwavering commitment to 24/7
+                      &quot;As a carrier working with Yoke.co, I can confidently
+                      say that they are a top-tier partner for any logistics or
+                      transportation needs, particularly within the event
+                      industry. From their unwavering commitment to 24/7
                       customer service to their deep understanding of the unique
                       challenges in live entertainment, Yoke has consistently
                       proven themselves to be a reliable, professional, and
@@ -2543,7 +2543,7 @@
             </div>
             <div class="uui-footer04_bottom-wrapper">
               <div class="uui-text-size-small text-color-gray500">
-                © 2025 Yoke.co
+                © 2025 Yoke
               </div>
               <div class="w-layout-grid uui-footer04_legal-list-2">
                 <a
