--- a/projects/on-site-services.html
+++ b/projects/on-site-services.html
@@ -524,7 +524,7 @@
             </div>
             <div class="uui-footer04_bottom-wrapper">
               <div class="uui-text-size-small text-color-gray500">
-                © 2025 Yoke.co
+                © 2025 Yoke
               </div>
               <div class="w-layout-grid uui-footer04_legal-list-2">
                 <a
