--- a/about.html
+++ b/about.html
@@ -733,55 +733,46 @@
                   >
                     <div class="image-wrapper">
                       <img
-                        src="images/nick-1.jpeg"
+                        src="images/nick-1.png"
                         loading="eager"
                         width="70"
                         sizes="70px"
                         alt=""
-                        srcset="
-                          images/nick-1-p-500.jpeg   500w,
-                          images/nick-1-p-800.jpeg   800w,
-                          images/nick-1-p-1080.jpeg 1080w,
-                          images/nick-1-p-1600.jpeg 1600w,
-                          images/nick-1.jpeg        1932w
-                        "
                         class="cover-image nick-photo"
                       />
                       <div class="image-overlay"></div>
                     </div>
                     <div class="margin-20px">
                       <div class="team-name-center">
-                        <h2 class="team-title">Nick Truppi</h2>
+                        <h2 class="team-title">Adrian Thompson</h2>
                         <div class="margin-10px">
                           <p class="job-role">Warehouse Manager</p>
                         </div>
                         <div class="uui-space-xsmall-2"></div>
                         <div class="uui-text-size-medium-2 regular">
-                          Nick is our Nashville Warehouse Manager. He maintains
-                          the storage, inventory, and maintenance of gear
-                          passing through our doors. He works closely with our
-                          partners to ensure that each gig, tour, or event has
-                          what they need to succeed. You may see him on-site
-                          loading trucks or providing a link between drivers and
-                          production to keep operations rolling as smoothly as
-                          possible.
+                          Adrian Thompson Adrian is our Nashville Warehouse
+                          Manager. He maintains the storage, inventory, and
+                          maintenance of gear passing through our doors and
+                          works closely with our partners to ensure that each
+                          gig, tour, or event has what it needs to succeed.
                         </div>
                         <div class="uui-text-size-medium-2 regular">
-                          Before joining the Yoke team in early 2023, Nick
-                          worked as an arborist for 5 years. He likes to point
-                          out and ramble about the trees he’s worked on around
-                          Nashville. You will often find him fishing on his days
-                          off.
+                          Upon discovering new opportunities available at Yoke,
+                          he left his 10 year career as a distillery manager
+                          behind where he was responsible for warehousing,
+                          aging, distilling, and blending spirits. Adrian is
+                          looking to combine his fastidiousness from his past
+                          experiences with his fervor for live entertainment to
+                          ensure any customer or driver stopping by our
+                          Nashville shop are pleased with accurate and safe
+                          truck packs for their event.
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="uui-text-size-medium-2 regular">
-                    Drawn to production warehousing by its hands-on approach to
-                    music and logistics, Nick strives to better the industry one
-                    truck at a time.
-                  </div>
+                  <div class="uui-text-size-medium-2 regular"></div>
                 </div>
+
                 <div id="w-node-_68173f5d-0b49-f3cf-6541-a577ea6a3dde-376c069a">
                   <div
                     data-w-id="68173f5d-0b49-f3cf-6541-a577ea6a3ddf"
@@ -1338,7 +1329,7 @@
             </div>
             <div class="uui-footer04_bottom-wrapper">
               <div class="uui-text-size-small text-color-gray500">
-                © 2025 Yoke
+                © 2025 Yoke Group, LLC
               </div>
               <div class="w-layout-grid uui-footer04_legal-list-2">
                 <a
