--- a/projects/warehousing.html
+++ b/projects/warehousing.html
@@ -517,7 +517,7 @@
             </div>
             <div class="uui-footer04_bottom-wrapper">
               <div class="uui-text-size-small text-color-gray500">
-                © 2025 Yoke
+                © 2025 Yoke Group, LLC
               </div>
               <div class="w-layout-grid uui-footer04_legal-list-2">
                 <a
