--- a/about.html
+++ b/about.html
@@ -750,7 +750,7 @@
                         </div>
                         <div class="uui-space-xsmall-2"></div>
                         <div class="uui-text-size-medium-2 regular">
-                          Adrian Thompson Adrian is our Nashville Warehouse
+                          Adrian Thompson is our Nashville Warehouse
                           Manager. He maintains the storage, inventory, and
                           maintenance of gear passing through our doors and
                           works closely with our partners to ensure that each
