--- a/about.html
+++ b/about.html
@@ -750,11 +750,11 @@
                         </div>
                         <div class="uui-space-xsmall-2"></div>
                         <div class="uui-text-size-medium-2 regular">
-                          Adrian Thompson is our Nashville Warehouse
-                          Manager. He maintains the storage, inventory, and
-                          maintenance of gear passing through our doors and
-                          works closely with our partners to ensure that each
-                          gig, tour, or event has what it needs to succeed.
+                          Adrian Thompson is our Nashville Warehouse Manager. He
+                          maintains the storage, inventory, and maintenance of
+                          gear passing through our doors and works closely with
+                          our partners to ensure that each gig, tour, or event
+                          has what it needs to succeed.
                         </div>
                         <div class="uui-text-size-medium-2 regular">
                           Upon discovering new opportunities available at Yoke,
@@ -1332,12 +1332,7 @@
                 © 2025 Yoke Group, LLC
               </div>
               <div class="w-layout-grid uui-footer04_legal-list-2">
-                <a
-                  href="documents/Yoke-Tariff.pdf"
-                  target="_blank"
-                  class="uui-footer04_legal-link-2"
-                  >Terms &amp; Conditions</a
-                >
+                <p class="uui-footer04_legal-link-2">Terms &amp; Conditions</p>
               </div>
             </div>
           </div>
