--- a/carriers.html
+++ b/carriers.html
@@ -636,12 +636,7 @@
                 © 2025 Yoke Group, LLC
               </div>
               <div class="w-layout-grid uui-footer04_legal-list-2">
-                <a
-                  href="documents/Yoke-Tariff.pdf"
-                  target="_blank"
-                  class="uui-footer04_legal-link-2"
-                  >Terms &amp; Conditions</a
-                >
+                <p class="uui-footer04_legal-link-2">Terms &amp; Conditions</p>
               </div>
             </div>
           </div>
