--- a/about.html
+++ b/about.html
@@ -496,6 +496,93 @@
                   >
                     <div class="image-wrapper">
                       <img
+                        src="images/yoke.jpg"
+                        loading="eager"
+                        width="70"
+                        alt=""
+                        class="cover-image andrew-photo"
+                      />
+                      <div class="image-overlay"></div>
+                    </div>
+                    <div class="margin-20px">
+                      <div class="team-name-center">
+                        <h2 class="team-title">Laura Gomez</h2>
+                        <div class="margin-10px">
+                          <p class="job-role"></p>
+                        </div>
+                        <div class="uui-space-xsmall-2"></div>
+                        <div class="uui-text-size-medium-2 regular">
+                          Laura’s going on five years in our logistics and
+                          operations world. Keeping things organized, finding
+                          solutions, and making sure everything runs smoothly
+                          from start to finish is practically second-nature to
+                          her at this point. A people person’s people-person,
+                          Laura loves going back and forth with the drivers that
+                          Yoke puts on the road each day ensuring that their rig
+                          and transit are running as expected but ready for if
+                          and when the inevitable challenges arise.
+                        </div>
+                        <div class="uui-text-size-medium-2 regular">
+                          Bilingual in English and Spanish, Laura balances
+                          raising her son while also being a melophile, an
+                          artist, and a bookworm.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div id="w-node-_86c63ec7-9504-1ba5-a39f-a8bb0875ae9e-376c069a">
+                  <div
+                    data-w-id="86c63ec7-9504-1ba5-a39f-a8bb0875ae9f"
+                    style="opacity: 0"
+                    class="team-wrapper"
+                  >
+                    <div class="image-wrapper">
+                      <img
+                        src="images/steve.png"
+                        loading="eager"
+                        width="70"
+                        alt=""
+                        class="cover-image andrew-photo"
+                      />
+                      <div class="image-overlay"></div>
+                    </div>
+                    <div class="margin-20px">
+                      <div class="team-name-center">
+                        <h2 class="team-title">Steve York</h2>
+                        <div class="margin-10px">
+                          <p class="job-role"></p>
+                        </div>
+                        <div class="uui-space-xsmall-2"></div>
+                        <div class="uui-text-size-medium-2 regular">
+                          A college dropout, Steve’s been touring since flip
+                          phones and MapQuest were king. Philly born, Nashville
+                          based, and driven by his life motto: “Nobody wants to
+                          be the old man on the front porch with no stories to
+                          tell.” He’s not fueled by comfort or routine; he’s
+                          driven by motion — by the hum of the highway at
+                          2:00am, the chaos of load-ins, and the stories that
+                          come from living life on the road instead of watching
+                          it pass by. The idea of sitting on a quiet porch with
+                          nothing to talk about terrifies him more than a blown
+                          tire at 3:00am. Now at Yoke, Steve’s goal is to keep
+                          the trucks moving one tour at a time — making sure
+                          every road story keeps rolling. His ultimate aim? To
+                          sell out his funeral — ideally with a competent
+                          backline and a solid lighting rig.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div id="w-node-_86c63ec7-9504-1ba5-a39f-a8bb0875ae9e-376c069a">
+                  <div
+                    data-w-id="86c63ec7-9504-1ba5-a39f-a8bb0875ae9f"
+                    style="opacity: 0"
+                    class="team-wrapper"
+                  >
+                    <div class="image-wrapper">
+                      <img
                         src="images/Andrew.png"
                         loading="eager"
                         width="70"
