--- a/about.html
+++ b/about.html
@@ -487,7 +487,7 @@
                       </div>
                     </div>
                   </div>
-                </div> 
+                </div>
                 <div id="w-node-_86c63ec7-9504-1ba5-a39f-a8bb0875ae9e-376c069a">
                   <div
                     data-w-id="86c63ec7-9504-1ba5-a39f-a8bb0875ae9f"
@@ -1145,7 +1145,7 @@
                     </div>
                   </div>
                 </div>
-                 <div id="w-node-_86c63ec7-9504-1ba5-a39f-a8bb0875ae9e-376c069a">
+                <div id="w-node-_86c63ec7-9504-1ba5-a39f-a8bb0875ae9e-376c069a">
                   <div
                     data-w-id="86c63ec7-9504-1ba5-a39f-a8bb0875ae9f"
                     style="opacity: 0"
@@ -1165,7 +1165,7 @@
                       <div class="team-name-center">
                         <h2 class="team-title">Laura Gomez</h2>
                         <div class="margin-10px">
-                          <p class="job-role"></p>
+                          <p class="job-role">Logistics Coordinator</p>
                         </div>
                         <div class="uui-space-xsmall-2"></div>
                         <div class="uui-text-size-medium-2 regular">
@@ -1208,7 +1208,7 @@
                       <div class="team-name-center">
                         <h2 class="team-title">Steve York</h2>
                         <div class="margin-10px">
-                          <p class="job-role"></p>
+                          <p class="job-role">Sales Associate</p>
                         </div>
                         <div class="uui-space-xsmall-2"></div>
                         <div class="uui-text-size-medium-2 regular">
